# nginx_legacy

./: .gitignore  CMakeLists.txt  main.cpp
src/toolset/nginx/: nginx_src.h
src/toolset/nginx/common/: commons.h
src/toolset/nginx/common/exception/: Exception.hpp  NgxAbort.hpp  NgxAgain.hpp  NgxBusy.hpp  NgxDeclined.hpp  NgxDone.hpp  NgxError.hpp  NgxException.hpp  exception.h
src/toolset/nginx/common/log/: NginxLog.hpp
src/toolset/nginx/common/time/: DateTime.hpp
src/toolset/nginx/common/value/: UnsetValue.hpp  value.hpp
src/toolset/nginx/module/: config  ngx_test_module.cpp
src/toolset/nginx/nginx_src/: myconfigure
src/toolset/nginx/nginx_src/auto/: make  options
src/toolset/nginx/nginx_src/objs/: Makefile  autoconf.err  ngx_auto_config.h  ngx_modules.c
src/toolset/nginx/nginx_src/src/core/: nginx.c
src/toolset/nginx/nginx_src/src/event/: ngx_event.h
src/toolset/nginx/nginx_src/src/http/modules/: ngx_http_degradation_module.c
